# ViroSense

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
annotate/: README.md  categories.py  foldmason.py  foldseek.py  structure.py  test_categories.py  test_foldmason.py  test_foldseek.py  test_structure.py
docs/: applications_framework.md  architecture.md  archive_publication_plan_v4.md  biosurveillance_research_plan.md  characterize.md  cli_architecture.md  cluster_validation.md  comprehensive_validation_results.md  embedding_atlas_findings.md  findings_log.md  forensics_pilot.md  functional_clustering_validation.md  future_applications.md  nim_api_layer_investigation.md  paper1_plan.md  paper2_plan.md  paper_series.md  planetary_scale_plan.md  poc_gene_boundaries.md  prior_art.md  prophage_reassessment.md  prophage_validation.md  publication_plan.md  rna_virus_length_analysis.md  session_summary_20260320.md  speed_benchmarking.md  speed_optimization.md  unified_research_roadmap.md
htcf/: benchmark_tools_run.sbatch  benchmark_tools_setup.sh  comprehensive_extraction.sbatch  exon_intron.sbatch  genome_scan.sbatch  prophage_benchmark.sh  retrain_7b_classifier.sh  rna_dark_matter.sbatch  run_benchmark.sh  setup.sh  start_nim_server.sbatch  virosense_pipeline.sh
manuscript/: paper1_draft.md
results/: PAPER_ASSETS.md
scripts/: analyze_clusters.py  analyze_functional_clustering_40b.py  analyze_rna_length.py  benchmark_exon_intron.py  benchmark_gauge_your_phage.py  benchmark_unified.py  bootstrap_ci.py  build_functional_panel.py  codon_periodicity_panel.py  compare_genomad.py  compare_tools.py  comprehensive_validation.py  download_evo2_weights.py  exon_intron_scan.py  filter_prophage_noise.py  generate_fig2.py  (+21 more)
(+135 files in other folders)
